[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
screenshots = "0.8.10"
enigo = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# これを追加！
image = "0.24"